--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
-    "d3": "^6.3.1",
     "ip-regex": "^2.1.0",
+    "plotly.js": "^1.58.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "4.0.1"
   },
   "scripts": {
