--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ip-regex": "^2.1.0",
     "plotly.js": "^1.58.4",
     "react": "^17.0.1",
+    "react-d3-speedometer": "^1.0.1",
     "react-dom": "^17.0.1",
     "react-notifications-component": "^3.0.3",
     "react-plotly.js": "^2.5.1",
